// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Range icon 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="left: 0px; width: 0px; position: absolute;"
    />
    <span
      class="rc-picker-suffix"
    >
      <span
        class="suffix-icon"
      />
    </span>
    <span
      class="rc-picker-clear"
    >
      <span
        class="suffix-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-rtl"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="right: 0px; width: 0px; position: absolute;"
    />
  </div>
</div>
`;

exports[`Picker.Range panelRender 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="left: 0px; width: 0px; position: absolute;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
        style="min-width: 0;"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container"
          style="margin-left: 0px;"
        >
          <h1>
            Light
          </h1>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="left: 0px; width: 0px; position: absolute;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-month-range-wrapper"
        style="min-width: 0;"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container"
          style="margin-left: 0px;"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                  tabindex="-1"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1990
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-super-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-07"
                            >
                              <div>
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-08"
                            >
                              <div>
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09"
                            >
                              <div>
                                9
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10"
                            >
                              <div>
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-11"
                            >
                              <div>
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-12"
                            >
                              <div>
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                  tabindex="-1"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          type="button"
                        >
                          1991
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-super-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-07"
                            >
                              <div>
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-08"
                            >
                              <div>
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-09"
                            >
                              <div>
                                9
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-10"
                            >
                              <div>
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-11"
                            >
                              <div>
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1991-12"
                            >
                              <div>
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
